@@ -1,10 +1,13 @@
-# $NetBSD: xfree.expat,v 1.1 2004/02/17 08:26:25 jlam Exp $
+# $NetBSD: xfree.expat,v 1.2 2005/06/10 03:44:07 jlam Exp $
 #
 include/expat.h
 lib/libexpat.a
 lib/libexpat.so
+lib/libexpat.so.0
 lib/libexpat.so.1
 lib/libexpat.so.1.0
+lib/libexpat.so.2
+lib/libexpat.so.3
 lib/libexpat.so.4
 lib/libexpat.so.4.0
 lib/libexpat.dylib
